k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-1
  labels:
    app: go-web-app-1
spec:
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: go-web-app-1
  type: ClusterIP
